End of section 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,6 @@
   "ConnectionStrings": 
   {
     "defaultConnection":"Data source=datingapp.db"
-  }
+  },
+  "TokenKey": "Super secret unguessable key, this must be the issuasdas  asd asd asd asdasdasdas e?123123"
 }
